--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="#profile">Profile</a></li>
+          <li><a class="nav-link scrollto" href="profile.html" target="none">Profile</a></li>
           <li><a class="nav-link scrollto " href="#schedule-me">Schedule Me</a></li>
           <li><a class="nav-link scrollto" href="#chat">Chat</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
+          <li><a class="getstarted scrollto" href="profile.html" target="none">Get Started</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -73,7 +73,7 @@
           <h1 data-aos="fade-up">Connect with Girls Who Code members</h1>
           <h2 data-aos="fade-up" data-aos-delay="400"></h2>
           <div data-aos="fade-up" data-aos-delay="800">
-            <a href="#about" class="btn-get-started scrollto">Get Started</a>
+            <a href="profile.html" target="none" class="btn-get-started scrollto">Get Started</a>
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="fade-left" data-aos-delay="200">
