changed out the sponsor images, added some text

--- a/index.html
+++ b/index.html
@@ -86,40 +86,36 @@
 
   <main id="main">
 
-    <!-- ======= Clients Section ======= -->
-    <section id="clients" class="clients clients">
+    <!-- ======= Sponsors Section ======= -->
+    <section id="sponsors" class="sponsors sponsors">
       <div class="container">
 
         <div class="row">
 
-          <div class="col-lg-2 col-md-4 col-6">
-            <img src="assets/img/clients/client-1.png" class="img-fluid" alt="" data-aos="zoom-in">
+          <div class="col-lg-2 col-md-3 col-6">
+            <img src="assets/img/sponsors/bankofa.png" class="img-fluid" alt="" data-aos="zoom-in">
           </div>
 
-          <div class="col-lg-2 col-md-4 col-6">
-            <img src="assets/img/clients/client-2.png" class="img-fluid" alt="" data-aos="zoom-in" data-aos-delay="100">
+          <div class="col-lg-2 col-md-3 col-6">
+            <img src="assets/img/sponsors/raytheon.png" class="img-fluid" alt="" data-aos="zoom-in" data-aos-delay="100">
           </div>
 
-          <div class="col-lg-2 col-md-4 col-6">
-            <img src="assets/img/clients/client-3.png" class="img-fluid" alt="" data-aos="zoom-in" data-aos-delay="200">
+          <div class="col-lg-3 col-md-3 col-6">
+            <img src="assets/img/sponsors/xandr.png" class="img-fluid" alt="" data-aos="zoom-in" data-aos-delay="200">
           </div>
 
-          <div class="col-lg-2 col-md-4 col-6">
-            <img src="assets/img/clients/client-4.png" class="img-fluid" alt="" data-aos="zoom-in" data-aos-delay="300">
+          <div class="col-lg-2 col-md-3 col-6">
+            <img src="assets/img/sponsors/metlife.png" class="img-fluid" alt="" data-aos="zoom-in" data-aos-delay="300">
           </div>
 
-          <div class="col-lg-2 col-md-4 col-6">
-            <img src="assets/img/clients/client-5.png" class="img-fluid" alt="" data-aos="zoom-in" data-aos-delay="400">
-          </div>
-
-          <div class="col-lg-2 col-md-4 col-6">
-            <img src="assets/img/clients/client-6.png" class="img-fluid" alt="" data-aos="zoom-in" data-aos-delay="500">
+          <div class="col-lg-3 col-md-3 col-6">
+            <img src="assets/img/sponsors/ussmallbusiness.png" class="img-fluid" alt="" data-aos="zoom-in" data-aos-delay="400">
           </div>
 
         </div>
 
       </div>
-    </section><!-- End Clients Section -->
+    </section><!-- End Sponsors Section -->
 
     <!-- ======= About Us Section ======= -->
     <section id="about" class="about">
@@ -167,7 +163,7 @@
                   <div class="count-box">
                     <i class="bi bi-emoji-smile"></i>
                     <span data-purecounter-start="0" data-purecounter-end="65" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>Happy Clients</strong> consequuntur voluptas nostrum aliquid ipsam architecto ut.</p>
+                    <p><strong>Girls Who Code</strong> members have used Girls Connect to reach out to other members of the community.</p>
                   </div>
                 </div>
 
@@ -175,7 +171,7 @@
                   <div class="count-box">
                     <i class="bi bi-journal-richtext"></i>
                     <span data-purecounter-start="0" data-purecounter-end="85" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>Projects</strong> adipisci atque cum quia aspernatur totam laudantium et quia dere tan</p>
+                    <p><strong>Projects</strong> have been discussed in our Projects Forum page.</p>
                   </div>
                 </div>
 
@@ -183,7 +179,7 @@
                   <div class="count-box">
                     <i class="bi bi-clock"></i>
                     <span data-purecounter-start="0" data-purecounter-end="18" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>Years of experience</strong> aut commodi quaerat modi aliquam nam ducimus aut voluptate non vel</p>
+                    <p><strong>Years of experience</strong> bridge the gap between the multiple generations Girls Connect reaches!</p>
                   </div>
                 </div>
 
@@ -191,7 +187,7 @@
                   <div class="count-box">
                     <i class="bi bi-award"></i>
                     <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>Awards</strong> rerum asperiores dolor alias quo reprehenderit eum et nemo pad der</p>
+                    <p><strong>Chats</strong> have been initiated since the launch of Girls Connect</p>
                   </div>
                 </div>
               </div>
@@ -202,29 +198,29 @@
       </div>
     </section><!-- End Counts Section -->
 
-    <!-- ======= Services Section ======= -->
-    <section id="services" class="services">
+    <!-- ======= Programs Section ======= -->
+    <section id="programs" class="programs">
       <div class="container">
 
         <div class="section-title" data-aos="fade-up">
-          <h2>Services</h2>
-          <p>Magnam dolores commodi suscipit eius consequatur ex aliquid fug</p>
+          <h2>programs</h2>
+          <p>Girls Who Code has multigenerational members across programs you can connect with!</p>
         </div>
 
         <div class="row">
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+              <h4 class="title"><a href="">Clubs</a></h4>
+              <p class="description">Girls Who Code has 3rd-5th grade clubs and 6th-8th grade clubs. As a member from this program, you can reach out to older members in the college or career programs! As an older member, you can help clubs by initiating outreach efforts through teaching curriculum or helping out at nearby clubs.</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <h4 class="title"><a href="https://girlswhocode.com/college-loops" target="none">College Loops</a></h4>
+              <p class="description">College Loops form a nation-wide network of college-aged Girls Who Code communities! At your college, you can join your College Loop or start one now!</p>
             </div>
           </div>
 
@@ -247,15 +243,15 @@
         </div>
 
       </div>
-    </section><!-- End Services Section -->
+    </section><!-- End programs Section -->
 
-    <!-- ======= More Services Section ======= -->
-    <section id="more-services" class="more-services">
+    <!-- ======= More programs Section ======= -->
+    <section id="more-programs" class="more-programs">
       <div class="container">
 
         <div class="row">
           <div class="col-md-6 d-flex align-items-stretch">
-            <div class="card" style='background-image: url("assets/img/more-services-1.jpg");' data-aos="fade-up" data-aos-delay="100">
+            <div class="card" style='background-image: url("assets/img/more-programs-1.jpg");' data-aos="fade-up" data-aos-delay="100">
               <div class="card-body">
                 <h5 class="card-title"><a href="">Lobira Duno</a></h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor ut labore et dolore magna aliqua.</p>
@@ -264,7 +260,7 @@
             </div>
           </div>
           <div class="col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
-            <div class="card" style='background-image: url("assets/img/more-services-2.jpg");' data-aos="fade-up" data-aos-delay="200">
+            <div class="card" style='background-image: url("assets/img/more-programs-2.jpg");' data-aos="fade-up" data-aos-delay="200">
               <div class="card-body">
                 <h5 class="card-title"><a href="">Limere Radses</a></h5>
                 <p class="card-text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem doloremque laudantium, totam rem.</p>
@@ -274,7 +270,7 @@
 
           </div>
           <div class="col-md-6 d-flex align-items-stretch mt-4">
-            <div class="card" style='background-image: url("assets/img/more-services-3.jpg");' data-aos="fade-up" data-aos-delay="100">
+            <div class="card" style='background-image: url("assets/img/more-programs-3.jpg");' data-aos="fade-up" data-aos-delay="100">
               <div class="card-body">
                 <h5 class="card-title"><a href="">Nive Lodo</a></h5>
                 <p class="card-text">Nemo enim ipsam voluptatem quia voluptas sit aut odit aut fugit, sed quia magni dolores.</p>
@@ -283,7 +279,7 @@
             </div>
           </div>
           <div class="col-md-6 d-flex align-items-stretch mt-4">
-            <div class="card" style='background-image: url("assets/img/more-services-4.jpg");' data-aos="fade-up" data-aos-delay="200">
+            <div class="card" style='background-image: url("assets/img/more-programs-4.jpg");' data-aos="fade-up" data-aos-delay="200">
               <div class="card-body">
                 <h5 class="card-title"><a href="">Pale Treda</a></h5>
                 <p class="card-text">Nostrum eum sed et autem dolorum perspiciatis. Magni porro quisquam laudantium voluptatem.</p>
@@ -294,7 +290,7 @@
         </div>
 
       </div>
-    </section><!-- End More Services Section -->
+    </section><!-- End More programs Section -->
 
     <!-- ======= Features Section ======= -->
     <section id="features" class="features">
