added logos, bracket, chat pages

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="profile.html" target="none">Profile</a></li>
           <li><a class="nav-link scrollto " href="schedule-me.html" target="none">Schedule Me</a></li>
-          <li><a class="nav-link scrollto" href="#chat">Chat</a></li>
+          <li><a class="nav-link scrollto" href="chat.html">Chat</a></li>
+          <li><a href="bracket.html">Bracket</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
           <li><a class="getstarted scrollto" href="profile.html" target="none">Get Started</a></li>
         </ul>
@@ -70,14 +71,14 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
-          <h1 data-aos="fade-up">Connect with Girls Who Code members</h1>
+          <h1 data-aos="fade-up">Connect with other <br>Girls Who Code!</h1>
           <h2 data-aos="fade-up" data-aos-delay="400"></h2>
           <div data-aos="fade-up" data-aos-delay="800">
             <a href="profile.html" target="none" class="btn-get-started scrollto">Get Started</a>
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="fade-left" data-aos-delay="200">
-          <img src="assets/img/hero-img.png" class="img-fluid animated" alt="">
+          <img src="assets/img/gwc_connect.png" class="img-fluid animated" style="max-width:500px;" alt="gwc connect logo">
         </div>
       </div>
     </div>
@@ -133,7 +134,7 @@
             <ul>
               <li><i class="ri-check-double-line"></i> Network with GWC peers or early professionals! </li>
               <li><i class="ri-check-double-line"></i> Be a Mentor or Mentee! </li>
-              <li><i class="ri-check-double-line"></i> Show school pride! </li>
+              <li><i class="ri-check-double-line"></i><a href="bracket.html">Show school pride!</a></li>
             </ul>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-up" data-aos-delay="300">
@@ -153,7 +154,7 @@
 
         <div class="row">
           <div class="image col-xl-5 d-flex align-items-stretch justify-content-center justify-content-xl-start" data-aos="fade-right" data-aos-delay="150">
-            <img src="assets/img/counts-img.svg" alt="" class="img-fluid">
+            <img src="assets/img/gwc_connect_2.png" alt="" class="img-fluid">
           </div>
 
           <div class="col-xl-7 d-flex align-items-stretch pt-4 pt-xl-0" data-aos="fade-left" data-aos-delay="300">
@@ -161,7 +162,7 @@
               <div class="row">
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
                   <div class="count-box">
-                    <i class="bi bi-emoji-smile"></i>
+                    <img src="/assets/img/sisterhood.png" style="max-width: 50px; position:absolute; padding-right: 10px;" alt="sisterhood_logo">
                     <span data-purecounter-start="0" data-purecounter-end="65" data-purecounter-duration="1" class="purecounter"></span>
                     <p><strong>Girls Who Code</strong> members have used Girls Connect to reach out to other members of the community.</p>
                   </div>
@@ -169,7 +170,7 @@
 
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
                   <div class="count-box">
-                    <i class="bi bi-journal-richtext"></i>
+                    <img src="/assets/img/analytics.png" style="max-width:50px; position:absolute; padding-right: 10px;" alt="project logo">
                     <span data-purecounter-start="0" data-purecounter-end="85" data-purecounter-duration="1" class="purecounter"></span>
                     <p><strong>Projects</strong> have been discussed in our Projects Forum page.</p>
                   </div>
@@ -177,7 +178,7 @@
 
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
                   <div class="count-box">
-                    <i class="bi bi-clock"></i>
+                    <img src="/assets/img/wall-clock.png" style="max-width:50px; position:absolute; padding-right: 10px;">
                     <span data-purecounter-start="0" data-purecounter-end="18" data-purecounter-duration="1" class="purecounter"></span>
                     <p><strong>Years of experience</strong> bridge the gap between the multiple generations Girls Connect reaches!</p>
                   </div>
@@ -185,7 +186,7 @@
 
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
                   <div class="count-box">
-                    <i class="bi bi-award"></i>
+                    <img src="/assets/img/friends.png" style="max-width:50px; position:absolute; padding-right:10px;">
                     <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="1" class="purecounter"></span>
                     <p><strong>Chats</strong> have been initiated since the launch of Girls Connect</p>
                   </div>
@@ -328,13 +329,11 @@
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="contact-about">
-              <h3>Vesperr</h3>
-              <p>Cras fermentum odio eu feugiat. Justo eget magna fermentum iaculis eu non diam phasellus. Scelerisque felis imperdiet proin fermentum leo. Amet volutpat consequat mauris nunc congue.</p>
+              <h3>GT Girls Who Code</h3>
+              <p>The best way to reach us is through email! We are also on Instagram and LinkedIn.</p>
               <div class="social-links">
-                <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-                <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-                <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-                <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                <a href="https://www.instagram.com/girlswhocodegt/?next=%2F" target="none" class="instagram"><i class="bi bi-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/gtgirlswhocode/" target="none" class="linkedin"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
           </div>
@@ -343,17 +342,12 @@
             <div class="info">
               <div>
                 <i class="ri-map-pin-line"></i>
-                <p>A108 Adam Street<br>New York, NY 535022</p>
+                <p>85 5th St NW<br>Atlanta,GA 30332</p>
               </div>
 
               <div>
                 <i class="ri-mail-send-line"></i>
-                <p>info@example.com</p>
-              </div>
-
-              <div>
-                <i class="ri-phone-line"></i>
-                <p>+1 5589 55488 55s</p>
+                <p>gtgirlswhocode@gmail.com</p>
               </div>
 
             </div>
@@ -398,6 +392,10 @@
             &copy; Copyright <strong>Vesperr</strong>. All Rights Reserved
           </div>
           <div class="credits">
+            <a href="https://www.flaticon.com/free-icons/friendship" title="friendship icons">Friendship icons created by Freepik - Flaticon</a><br>
+            <a href="https://www.flaticon.com/free-icons/project-management" title="project management icons">Project management icons created by Nhor Phai - Flaticon</a><br>
+            <a href="https://www.flaticon.com/free-icons/time-and-date" title="time and date icons">Time and date icons created by smalllikeart - Flaticon</a><br>
+            <a href="https://www.flaticon.com/free-icons/friends" title="friends icons">Friends icons created by Freepik - Flaticon</a>
             <!-- All the links in the footer should remain intact. -->
             <!-- You can delete the links only if you purchased the pro version. -->
             <!-- Licensing information: https://bootstrapmade.com/license/ -->
