--- a/bracket.html
+++ b/bracket.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Girls Connect - Profile</title>
+  <title>Girls Connect - College Loop Bracket</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -50,15 +50,15 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
-          <li><a class="nav-link scrollto" href="index.html#about">About</a></li>
-          <li><a class="nav-link scrollto" href="profile.html" target="none">Profile</a></li>
-          <li><a class="nav-link scrollto " href="schedule-me.html" target="none">Schedule Me</a></li>
-          <li><a class="nav-link scrollto" href="chat.html">Chat</a></li>
-          <li><a href="bracket.html">Bracket</a></li>
-          <li><a href="index.html#contact">Contact</a></li>
-          <li><a href="profile.html" target="none">Get Started</a></li>
-        </ul>
+            <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
+            <li><a class="nav-link scrollto" href="index.html#about">About</a></li>
+            <li><a class="nav-link scrollto" href="profile.html" target="none">Profile</a></li>
+            <li><a class="nav-link scrollto " href="schedule-me.html" target="none">Schedule Me</a></li>
+            <li><a class="nav-link scrollto" href="chat.html">Chat</a></li>
+            <li><a href="bracket.html">Bracket</a></li>
+            <li><a href="index.html#contact">Contact</a></li>
+            <li><a href="profile.html" target="none">Get Started</a></li>
+          </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
@@ -69,65 +69,19 @@
 
   <main id="main">
 
-    <!-- ======= Create/Update Profile ======= -->
+    <!-- ======= About College Bracket ======= -->
     <section id="contact" class="contact">
       <div class="container">
 
         <div class="section-title" data-aos="fade-up">
-          <h2>Your Profile</h2>
+          <h2>What is it?</h2>
         </div>
+        
 
         <div class="row">
 
           <div class="col-lg-15 col-md-16" data-aos="fade-up" data-aos-delay="100">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-                <div class="form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your First and Last Name" required>
-                </div>
-                <div class="form-group">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-                </div>
-                <div class="form-group">
-                  <input type="text" class="form-control" name="loopId" id="loopId" placeholder="Your College Loops ID" required>
-                </div>
-                <div class="form-group">
-                  <textarea class="form-control" name="message" rows="5" placeholder="A short description about you and what you want to get from your Connect Chats" required></textarea>
-                </div>
-                <div class="form-group">
-                    <text>Please upload your resume if you have one</text>
-                    <input type="file" id="myFile" name="filename">
-                </div>
-                <div class="form-group">
-                    <label for="age">Where are you:</label>
-                    <select name="age" id="age">
-                        <option value="highschool">High School</option>
-                        <option value="undergrad">Undergraduate</option>
-                        <option value="graduate">Graduate</option>
-                        <option value="postgrad">Postgraduate</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <text>What you would like to get out of Girls Connect:</text>
-                    <fieldset>
-                        <input type="checkbox" name="purpose" value="socializing" id="socializing">
-                        <label for="socializing">Meet new people</label><br>
-                        <input type="checkbox" name="purpose" value="hsAdvice" id="hsAdvice">
-                        <label for="hsAdvice">High school advice</label><br>
-                        <input type="checkbox" name="purpose" value="collegeAdvice" id="collegeAdvice">
-                        <label for="collegeAdvice">College advice</label><br>
-                        <input type="checkbox" name="purpose" value="careerAdvice" id="careerAdvice">
-                        <label for="careerAdvice">Career advice</label><br>
-                        <input type="checkbox" name="purpose" value="projectWork" id="projectWork">
-                        <label for="projectWork">Project questions</label><br>
-                    </fieldset>
-                </div>
-                <div class="my-3">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Your profile has been created. Thank you!</div>
-                </div>
-                <div class="text-center"><button type="submit">Save Changes</button></div>
-              </form>
+            <p>Show school pride by participating in our college loop bracket! You earn points by actively participating with Girls Connect. This includes posting in our Projects Forum page, having Chats, and involving yourself in our mentorship program!</p>
           </div>
 
         </div>
