--- a/chat.html
+++ b/chat.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Girls Connect - Profile</title>
+  <title>Girls Connect - Home</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -35,11 +35,11 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
 </head>
-
 <body>
 
-  <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top d-flex align-items-center">
+
+ <!-- ======= Header ======= -->
+ <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
@@ -64,80 +64,9 @@
 
     </div>
   </header><!-- End Header -->
+    <div id="tlkio" data-channel="hey" style="width:100%;height:400px;"></div><script async src="http://tlk.io/embed.js" type="text/javascript"></script>
 
-  <section></section>
-
-  <main id="main">
-
-    <!-- ======= Create/Update Profile ======= -->
-    <section id="contact" class="contact">
-      <div class="container">
-
-        <div class="section-title" data-aos="fade-up">
-          <h2>Your Profile</h2>
-        </div>
-
-        <div class="row">
-
-          <div class="col-lg-15 col-md-16" data-aos="fade-up" data-aos-delay="100">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-                <div class="form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your First and Last Name" required>
-                </div>
-                <div class="form-group">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-                </div>
-                <div class="form-group">
-                  <input type="text" class="form-control" name="loopId" id="loopId" placeholder="Your College Loops ID" required>
-                </div>
-                <div class="form-group">
-                  <textarea class="form-control" name="message" rows="5" placeholder="A short description about you and what you want to get from your Connect Chats" required></textarea>
-                </div>
-                <div class="form-group">
-                    <text>Please upload your resume if you have one</text>
-                    <input type="file" id="myFile" name="filename">
-                </div>
-                <div class="form-group">
-                    <label for="age">Where are you:</label>
-                    <select name="age" id="age">
-                        <option value="highschool">High School</option>
-                        <option value="undergrad">Undergraduate</option>
-                        <option value="graduate">Graduate</option>
-                        <option value="postgrad">Postgraduate</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <text>What you would like to get out of Girls Connect:</text>
-                    <fieldset>
-                        <input type="checkbox" name="purpose" value="socializing" id="socializing">
-                        <label for="socializing">Meet new people</label><br>
-                        <input type="checkbox" name="purpose" value="hsAdvice" id="hsAdvice">
-                        <label for="hsAdvice">High school advice</label><br>
-                        <input type="checkbox" name="purpose" value="collegeAdvice" id="collegeAdvice">
-                        <label for="collegeAdvice">College advice</label><br>
-                        <input type="checkbox" name="purpose" value="careerAdvice" id="careerAdvice">
-                        <label for="careerAdvice">Career advice</label><br>
-                        <input type="checkbox" name="purpose" value="projectWork" id="projectWork">
-                        <label for="projectWork">Project questions</label><br>
-                    </fieldset>
-                </div>
-                <div class="my-3">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Your profile has been created. Thank you!</div>
-                </div>
-                <div class="text-center"><button type="submit">Save Changes</button></div>
-              </form>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Contact Section -->
-
-  </main><!-- End #main -->
-
-  <!-- ======= Footer ======= -->
+<!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
       <div class="row d-flex align-items-center">
@@ -146,6 +75,10 @@
             &copy; Copyright <strong>Vesperr</strong>. All Rights Reserved
           </div>
           <div class="credits">
+            <a href="https://www.flaticon.com/free-icons/friendship" title="friendship icons">Friendship icons created by Freepik - Flaticon</a><br>
+            <a href="https://www.flaticon.com/free-icons/project-management" title="project management icons">Project management icons created by Nhor Phai - Flaticon</a><br>
+            <a href="https://www.flaticon.com/free-icons/time-and-date" title="time and date icons">Time and date icons created by smalllikeart - Flaticon</a><br>
+            <a href="https://www.flaticon.com/free-icons/friends" title="friends icons">Friends icons created by Freepik - Flaticon</a>
             <!-- All the links in the footer should remain intact. -->
             <!-- You can delete the links only if you purchased the pro version. -->
             <!-- Licensing information: https://bootstrapmade.com/license/ -->
