turned chat page into project-forum, added some italicized descriptions

--- a/schedule-me.html
+++ b/schedule-me.html
@@ -1,43 +1,71 @@
-<!DOCTYPE html>
-<html lang="en">
+
+  <!DOCTYPE html>
+  <html lang="en">
+  
+  <head>
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  
+    <title>Girls Connect - Home</title>
+    <meta content="" name="description">
+    <meta content="" name="keywords">
+  
+    <!-- Favicons -->
+    <link href="assets/img/favicon.png" rel="icon">
+    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  
+    <!-- Vendor CSS Files -->
+    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  
+    <!-- Template Main CSS File -->
+    <link href="assets/css/style.css" rel="stylesheet">
+  
+    <!-- =======================================================
+    * Template Name: Vesperr - v4.9.1
+    * Template URL: https://bootstrapmade.com/vesperr-free-bootstrap-template/
+    * Author: BootstrapMade.com
+    * License: https://bootstrapmade.com/license/
+    ======================================================== -->
   </head>
 
   <body>
     <!-- ======= Header ======= -->
-    <header id="header" class="fixed-top d-flex align-items-center">
-      <div class="container d-flex align-items-center justify-content-between">
-        <div class="logo">
-          <h1><a href="index.html">Girls Connect</a></h1>
-          <!-- Uncomment below if you prefer to use an image logo -->
-          <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
-        </div>
+  <header id="header" class="fixed-top d-flex align-items-center">
+    <div class="container d-flex align-items-center justify-content-between">
 
-        <nav id="navbar" class="navbar">
-          <ul>
-            <li><a class="nav-link scrollto" href="index.html">Home</a></li>
-            <li><a class="nav-link scrollto" href="index.html">About</a></li>
-            <li>
-              <a class="nav-link scrollto active" href="profile.html"
-                >Profile</a
-              >
-            </li>
-            <li>
-              <a class="nav-link scrollto" href="#schedule-me">Schedule Me</a>
-            </li>
-            <li><a class="nav-link scrollto" href="index.html">Chat</a></li>
-            <li><a class="nav-link scrollto" href="index.html">Contact</a></li>
-            <li>
-              <a class="getstarted scrollto" href="profile.html">Get Started</a>
-            </li>
-          </ul>
-          <i class="bi bi-list mobile-nav-toggle"></i>
-        </nav>
-        <!-- .navbar -->
+      <div class="logo">
+        <h1><a href="index.html">Girls Connect</a></h1>
+        <!-- Uncomment below if you prefer to use an image logo -->
+        <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
-    </header>
-    <!-- End Header -->
 
-    <section></section>
+      <nav id="navbar" class="navbar">
+        <ul>
+          <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
+          <li><a class="nav-link scrollto" href="index.html#about">About</a></li>
+          <li><a class="nav-link scrollto" href="profile.html" target="none">Profile</a></li>
+          <li><a class="nav-link scrollto " href="schedule-me.html" target="none">Schedule Me</a></li>
+          <li><a class="nav-link scrollto" href="project-forum.html">Project Forum</a></li>
+          <li><a href="bracket.html">Bracket</a></li>
+          <li><a href="index.html#contact">Contact</a></li>
+          <li><a href="profile.html" target="none">Get Started</a></li>
+        </ul>
+        <i class="bi bi-list mobile-nav-toggle"></i>
+      </nav><!-- .navbar -->
+
+    </div>
+  </header><!-- End Header -->
+
+  <section></section>
 
     <main id="main">
       <!-- ======= Schedule Me for a Chat ======= -->
@@ -46,6 +74,7 @@
           <div class="section-title" data-aos="fade-up">
             <h2>Schedule Me</h2>
           </div>
+          <p data-aos="fade-up"><em>This page will populate with Calendly links of matches based on what is filled out in the user profile. A user will be able to book time on calendars of other GWC members where there is a match! Alternatively, there would be a profile directory for members to scroll through, so they can pick a calendar for a specific person.</em></p>
           <!-- Calendly inline widget begin -->
           <div
             class="calendly-inline-widget"
