--- a/bracket.html
+++ b/bracket.html
@@ -54,7 +54,7 @@
             <li><a class="nav-link scrollto" href="index.html#about">About</a></li>
             <li><a class="nav-link scrollto" href="profile.html" target="none">Profile</a></li>
             <li><a class="nav-link scrollto " href="schedule-me.html" target="none">Schedule Me</a></li>
-            <li><a class="nav-link scrollto" href="chat.html">Chat</a></li>
+            <li><a class="nav-link scrollto" href="project-forum.html">Project Forum</a></li>
             <li><a href="bracket.html">Bracket</a></li>
             <li><a href="index.html#contact">Contact</a></li>
             <li><a href="profile.html" target="none">Get Started</a></li>
@@ -74,14 +74,14 @@
       <div class="container">
 
         <div class="section-title" data-aos="fade-up">
-          <h2>What is it?</h2>
+          <h2>Bracket</h2>
         </div>
         
 
         <div class="row">
 
           <div class="col-lg-15 col-md-16" data-aos="fade-up" data-aos-delay="100">
-            <p>Show school pride by participating in our college loop bracket! You earn points by actively participating with Girls Connect. This includes posting in our Projects Forum page, having Chats, and involving yourself in our mentorship program!</p>
+            <p>Show school pride by participating in our bracket! You earn points for your team by actively participating with Girls Connect. This includes posting in our Project Forum page, having Chats, and involving yourself in our mentorship program! Teams can include GWC clubs, college loops, or any chapter that wishes to participate!</p>
           </div>
 
         </div>
