--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="profile.html" target="none">Profile</a></li>
           <li><a class="nav-link scrollto " href="schedule-me.html" target="none">Schedule Me</a></li>
-          <li><a class="nav-link scrollto" href="chat.html">Chat</a></li>
+          <li><a class="nav-link scrollto" href="project-forum.html">Project Forum</a></li>
           <li><a href="bracket.html">Bracket</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
           <li><a class="getstarted scrollto" href="profile.html" target="none">Get Started</a></li>
@@ -134,7 +134,7 @@
             <ul>
               <li><i class="ri-check-double-line"></i> Network with GWC peers or early professionals! </li>
               <li><i class="ri-check-double-line"></i> Be a Mentor or Mentee! </li>
-              <li><i class="ri-check-double-line"></i><a href="bracket.html">Show school pride!</a></li>
+              <li><i class="ri-check-double-line"></i><a href="bracket.html">Show school pride and earn swag!</a></li>
             </ul>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-up" data-aos-delay="300">
@@ -172,7 +172,7 @@
                   <div class="count-box">
                     <img src="/assets/img/analytics.png" style="max-width:50px; position:absolute; padding-right: 10px;" alt="project logo">
                     <span data-purecounter-start="0" data-purecounter-end="85" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>Projects</strong> have been discussed in our Projects Forum page.</p>
+                    <p><strong>Projects</strong> have been discussed in our Project Forum page.</p>
                   </div>
                 </div>
 
@@ -261,7 +261,7 @@
           </div>
           <div class="col-lg-7">
             <p>
-              You need to have a Girls Who Code HQ account and be enrolled in a program with a program code to access the Chat, Projects Forum and Schedule Me features. See the profile page for more details!
+              You need to have a Girls Who Code HQ account and be enrolled in a program with a program code to access the Project Forum and Schedule Me features. See the profile page for more details!
             </p>
           </div>
         </div><!-- End F.A.Q Item-->
