--- a/project-forum.html
+++ b/project-forum.html
@@ -35,11 +35,11 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
 </head>
-
 <body>
 
-  <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top d-flex align-items-center">
+
+ <!-- ======= Header ======= -->
+ <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
@@ -50,93 +50,44 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto" href="index.html">Home</a></li>
-          <li><a class="nav-link scrollto" href="index.html">About</a></li>
-          <li><a class="nav-link scrollto active" href="profile.html">Profile</a></li>
-          <li><a class="nav-link scrollto " href="#schedule-me">Schedule Me</a></li>
-          <li><a class="nav-link scrollto" href="index.html">Chat</a></li>
-          <li><a class="nav-link scrollto" href="index.html">Contact</a></li>
-          <li><a class="getstarted scrollto" href="profile.html">Get Started</a></li>
+          <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
+          <li><a class="nav-link scrollto" href="index.html#about">About</a></li>
+          <li><a class="nav-link scrollto" href="profile.html" target="none">Profile</a></li>
+          <li><a class="nav-link scrollto " href="schedule-me.html" target="none">Schedule Me</a></li>
+          <li><a class="nav-link scrollto" href="project-forum.html">Project Forum</a></li>
+          <li><a href="bracket.html">Bracket</a></li>
+          <li><a href="index.html#contact">Contact</a></li>
+          <li><a href="profile.html" target="none">Get Started</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
     </div>
   </header><!-- End Header -->
-
   <section></section>
-
-  <main id="main">
-
-    <!-- ======= Project Forum ======= -->
+  <div class="main" id="main">
     <section id="contact" class="contact">
       <div class="container">
 
         <div class="section-title" data-aos="fade-up">
           <h2>Project Forum</h2>
         </div>
+        
 
         <div class="row">
 
           <div class="col-lg-15 col-md-16" data-aos="fade-up" data-aos-delay="100">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-                <div class="form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your First and Last Name" required>
-                </div>
-                <div class="form-group">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-                </div>
-                <div class="form-group">
-                  <input type="text" class="form-control" name="loopId" id="loopId" placeholder="Your College Loops ID" required>
-                </div>
-                <div class="form-group">
-                  <textarea class="form-control" name="message" rows="5" placeholder="A short description about you and what you want to get from your Connect Chats" required></textarea>
-                </div>
-                <div class="form-group">
-                    <text>Please upload your resume if you have one</text>
-                    <input type="file" id="myFile" name="filename">
-                </div>
-                <div class="form-group">
-                    <label for="age">Where are you:</label>
-                    <select name="age" id="age">
-                        <option value="highschool">High School</option>
-                        <option value="undergrad">Undergraduate</option>
-                        <option value="graduate">Graduate</option>
-                        <option value="postgrad">Postgraduate</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <text>What you would like to get out of Girls Connect:</text>
-                    <fieldset>
-                        <input type="checkbox" name="purpose" value="socializing" id="socializing">
-                        <label for="socializing">Meet new people</label><br>
-                        <input type="checkbox" name="purpose" value="hsAdvice" id="hsAdvice">
-                        <label for="hsAdvice">High school advice</label><br>
-                        <input type="checkbox" name="purpose" value="collegeAdvice" id="collegeAdvice">
-                        <label for="collegeAdvice">College advice</label><br>
-                        <input type="checkbox" name="purpose" value="careerAdvice" id="careerAdvice">
-                        <label for="careerAdvice">Career advice</label><br>
-                        <input type="checkbox" name="purpose" value="projectWork" id="projectWork">
-                        <label for="projectWork">Project questions</label><br>
-                    </fieldset>
-                </div>
-                <div class="my-3">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Your profile has been created. Thank you!</div>
-                </div>
-                <div class="text-center"><button type="submit">Save Changes</button></div>
-              </form>
+            <p><em>Here, there would be different threads for the user to navigate, such as Open Projects, Project Ideas, or Project Advice. Each thread would have a singular purpose. For example, Open Projects would be projects where members are looking for collaborators, Project Ideas are projects simply in the ideation phase, and Project Advice is more for members looking to improve their projects. For each username, the user can put a label such as TIP '22 or CL '24 to indicate which program and year they are a member of. </em></p>
           </div>
 
         </div>
 
       </div>
     </section><!-- End Contact Section -->
+    <div id="tlkio" data-channel="hey" style="width:100%;height:400px;"></div><script async src="http://tlk.io/embed.js" type="text/javascript"></script>
+  </div>
 
-  </main><!-- End #main -->
-
-  <!-- ======= Footer ======= -->
+<!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
       <div class="row d-flex align-items-center">
@@ -145,6 +96,10 @@
             &copy; Copyright <strong>Vesperr</strong>. All Rights Reserved
           </div>
           <div class="credits">
+            <a href="https://www.flaticon.com/free-icons/friendship" title="friendship icons">Friendship icons created by Freepik - Flaticon</a><br>
+            <a href="https://www.flaticon.com/free-icons/project-management" title="project management icons">Project management icons created by Nhor Phai - Flaticon</a><br>
+            <a href="https://www.flaticon.com/free-icons/time-and-date" title="time and date icons">Time and date icons created by smalllikeart - Flaticon</a><br>
+            <a href="https://www.flaticon.com/free-icons/friends" title="friends icons">Friends icons created by Freepik - Flaticon</a>
             <!-- All the links in the footer should remain intact. -->
             <!-- You can delete the links only if you purchased the pro version. -->
             <!-- Licensing information: https://bootstrapmade.com/license/ -->
