--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <li><a class="nav-link scrollto" href="profile.html" target="none">Profile</a></li>
           <li><a class="nav-link scrollto " href="schedule-me.html" target="none">Schedule Me</a></li>
           <li><a class="nav-link scrollto" href="project-forum.html">Project Forum</a></li>
-          <li><a href="bracket.html">Bracket</a></li>
+          <li><a href="leaderboard.html">Leaderboard</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
           <li><a class="getstarted scrollto" href="profile.html" target="none">Get Started</a></li>
         </ul>
@@ -134,7 +134,7 @@
             <ul>
               <li><i class="ri-check-double-line"></i> Network with GWC peers or early professionals! </li>
               <li><i class="ri-check-double-line"></i> Be a Mentor or Mentee! </li>
-              <li><i class="ri-check-double-line"></i><a href="bracket.html">Show school pride and earn swag!</a></li>
+              <li><i class="ri-check-double-line"></i><a href="leaderboard.html">Show school pride and earn swag!</a></li>
             </ul>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-up" data-aos-delay="300">
@@ -269,11 +269,11 @@
         <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
           <div class="col-lg-5">
             <i class="ri-question-line"></i>
-            <h4>Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque?</h4>
+            <h4>Can anyone participate in the running for Leaderboard?</h4>
           </div>
           <div class="col-lg-7">
             <p>
-              Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim.
+              As long as you are in a club, College Loop, or other chapter, you can enroll your team to be in the running for the Leaderboard! See the <a href="leaderboard.html">Leaderboard</a> page for more information.
             </p>
           </div>
         </div><!-- End F.A.Q Item-->
@@ -281,11 +281,11 @@
         <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
           <div class="col-lg-5">
             <i class="ri-question-line"></i>
-            <h4>Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi?</h4>
+            <h4>How do I find GWC members with similar interests?</h4>
           </div>
           <div class="col-lg-7">
             <p>
-              Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus.
+              After you fill out your profile, you will be matched with other GWC members with similar interests! Additionally, you will be matched with members from a younger cohort, helping fulfill a goal of Girls Connect by acting as an older role model for younger girls. For example, if you are a College Loop member, you can serve as a mentor for a Club member. You can also go to the <a href="schedule-me.html">Schedule Me</a> page to see a comprehensive directory of all members who have signed up for Girls Connect.</a>
             </p>
           </div>
         </div><!-- End F.A.Q Item-->
@@ -293,11 +293,11 @@
         <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
           <div class="col-lg-5">
             <i class="ri-question-line"></i>
-            <h4>Ac odio tempor orci dapibus. Aliquam eleifend mi in nulla?</h4>
+            <h4>How much time commitment is there in participating with Girls Connect?</h4>
           </div>
           <div class="col-lg-7">
             <p>
-              Aperiam itaque sit optio et deleniti eos nihil quidem cumque. Voluptas dolorum accusantium sunt sit enim. Provident consequuntur quam aut reiciendis qui rerum dolorem sit odio. Repellat assumenda soluta sunt pariatur error doloribus fuga.
+              How much you put into Girls Connect is completely up to you! That being said, how much you use Girls Connect will correlate with how much you get out of it. Interacting with the Project Forum, chatting with other members, and serving as a mentor and/or mentee are immensely rewarding ways to grow yourself professionally and personally!
             </p>
           </div>
         </div><!-- End F.A.Q Item-->
@@ -305,11 +305,11 @@
         <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="500">
           <div class="col-lg-5">
             <i class="ri-question-line"></i>
-            <h4>Tempus quam pellentesque nec nam aliquam sem et tortor consequat?</h4>
+            <h4>Is there a fee for using Girls Connect?</h4>
           </div>
           <div class="col-lg-7">
             <p>
-              Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in
+              No! Our platform is absolutely free. We wish to provide a space for all Girls Who Code members, across generations, to communicate and build relationships.
             </p>
           </div>
         </div><!-- End F.A.Q Item-->
