--- a/leaderboard.html
+++ b/leaderboard.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Girls Connect - College Loop Bracket</title>
+  <title>Girls Connect - Leaderboard</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -55,7 +55,7 @@
             <li><a class="nav-link scrollto" href="profile.html" target="none">Profile</a></li>
             <li><a class="nav-link scrollto " href="schedule-me.html" target="none">Schedule Me</a></li>
             <li><a class="nav-link scrollto" href="project-forum.html">Project Forum</a></li>
-            <li><a href="bracket.html">Bracket</a></li>
+            <li><a href="leaderboard.html">Leaderboard</a></li>
             <li><a href="index.html#contact">Contact</a></li>
             <li><a href="profile.html" target="none">Get Started</a></li>
           </ul>
@@ -69,19 +69,19 @@
 
   <main id="main">
 
-    <!-- ======= About College Bracket ======= -->
+    <!-- ======= About Leaderboard ======= -->
     <section id="contact" class="contact">
       <div class="container">
 
         <div class="section-title" data-aos="fade-up">
-          <h2>Bracket</h2>
+          <h2>Leaderboard</h2>
         </div>
         
 
         <div class="row">
 
           <div class="col-lg-15 col-md-16" data-aos="fade-up" data-aos-delay="100">
-            <p>Show school pride by participating in our bracket! You earn points for your team by actively participating with Girls Connect. This includes posting in our Project Forum page, having Chats, and involving yourself in our mentorship program! Teams can include GWC clubs, college loops, or any chapter that wishes to participate!</p>
+            <p>Show school (or club) pride by entering into the running for SWAG! You earn points for your team by actively participating with Girls Connect. This includes posting in our Project Forum page, having Chats, and involving yourself in our mentorship program! Teams can include GWC clubs, college loops, or any chapter that wishes to participate. Top 3 teams at the end of every academic semester get swag!</p>
           </div>
 
         </div>
