--- a/schedule-me.html
+++ b/schedule-me.html
@@ -55,7 +55,7 @@
           <li><a class="nav-link scrollto" href="profile.html" target="none">Profile</a></li>
           <li><a class="nav-link scrollto " href="schedule-me.html" target="none">Schedule Me</a></li>
           <li><a class="nav-link scrollto" href="project-forum.html">Project Forum</a></li>
-          <li><a href="bracket.html">Bracket</a></li>
+          <li><a href="leaderboard.html">Leaderboard</a></li>
           <li><a href="index.html#contact">Contact</a></li>
           <li><a href="profile.html" target="none">Get Started</a></li>
         </ul>
